[package]
name = "pallet-username-storage"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Username storage pallet"

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, package = "parity-scale-codec", features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
pallet-username-storage-runtime-api = { path = "./runtime-api", default-features = false }
pallet-username-storage-rpc = { path = "./rpc", default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
sp-std = { version = "11.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-api/std",
    "sp-io/std",
    "pallet-username-storage-runtime-api/std",
    "pallet-username-storage-rpc/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
