[package]
name = "pallet-username-storage-rpc"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "RPC for username storage pallet"

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros"] }
sp-api = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, package = "parity-scale-codec", features = [
    "derive",
] }
pallet-username-storage-runtime-api = { path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "codec/std",
    "pallet-username-storage-runtime-api/std",
]
