[package]
name = "pallet-username-storage-runtime-api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Runtime API for username storage pallet"

[dependencies]
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, package = "parity-scale-codec", features = [
    "derive",
] }
sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["sp-api/std", "sp-runtime/std", "codec/std", "sp-core/std"]
